--- a/Style.css
+++ b/Style.css
@@ -1,10 +1,82 @@
-*{
+* {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    text-decoration: none;   
+    text-decoration: none;
+    font-family: "inter, sans-serif";
 }
 
-.root{
-    --bg-color
+body {
+    background: linear-gradient(to left, rgba(135, 239, 246, 1), rgba(255, 255, 255, 1));
+}
+
+.header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 40px 80px;
+    gap: 20px;
+
+    & .nav {
+        display: flex;
+        gap: 50px;
+
+    }
+
+}
+
+.main {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: calc(100vh - 110px);
+    justify-content: space-between;
+    padding: 80px;
+
+    & .lado-esquerdo {
+
+        & .content{
+            display: flex;
+        flex-direction: column;
+        padding: 80px;
+       justify-content: space-between;
+    
+
+        }
+        
+    }
+
+& .hello{
+    color: red;
+    font-size: 24px;
+    font-weight: 600;
+
+}
+
+& .h1{
+    color: black;
+    font-size: 40px;
+    font-weight: 800;
+}
+
+& .vm{
+    font-weight: 400;
+}
+
+& .btns{
+ 
+    & .v1{
+        color:black;
+        border-radius: 15px;
+        background-color:  rgba(74, 187, 194, 1);
+    }
+
+    & .v2{
+        color: rgba(74, 187, 194, 1);
+        border-radius: 15px;
+    }
+}
+
+
+
 }
